TBBA-123 fix for scrollbars on the batch editing tables. need to do more work on this to make the text fields auto expand as there is some weirdness going on ..

--- a/app/styles/tables.scss
+++ b/app/styles/tables.scss
@@ -285,3 +285,4 @@ table th[class*=col-] {
 .table tr.clickable-row:hover td.review-columns {
   background-color: #e4e4e4!important;
 }
+.sca-batch-editing textarea{overflow:visible!important;max-height:150px!important;}
